--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jacopo Mucci",
   "license": "ISC",
   "dependencies": {
+    "@icon/themify-icons": "^1.0.1-alpha.3",
     "sass": "^1.27.0"
   },
   "devDependencies": {
