--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "Jacopo Mucci",
   "license": "ISC",
   "dependencies": {
     "@icon/themify-icons": "^1.0.1-alpha.3",
+    "gh-pages": "^3.1.0",
     "sass": "^1.27.0"
   },
   "devDependencies": {
