--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
-    "deploy": "gh-pages -d dist"
+    "build": "parcel build src/index.html --public-url .",
+    "deploy": "npm run build && gh-pages -d ./dist && rm -rf ./dist"
   },
   "keywords": [],
   "author": "Jacopo Mucci",
