--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html --global app",
     "build": "parcel build src/index.html --public-url .",
     "deploy": "npm run build && gh-pages -d ./dist && rm -rf ./dist"
   },
